<resources>
    <string name="app_name">VATapp</string>
    <string name="unpr">Unit price</string>
    <string name="entval">Enter a value</string>
    <string name="numu">Number of units</string>
    <string name="etNumUnits">Enter a value</string>
    <string name="upevat">Unit price without VAT</string>
    <string name="upivat">Unit price with VAT</string>
    <string name="clr">Clear</string>
    <string name="calc">Calculate</string>
    <string name="amvat">Amount excluding VAT</string>
    <string name="vat">VAT</string>
    <string name="mainvat">Amount including VAT</string>
</resources>